# base-liam

./: .clang-format  .clangd  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-single-platform.yml  makefile.yml
src/: encoder.c  encoder.h  liamify.c  unliamify.c
test/: encoder.c  test.h
